added add patient and item activity

--- a/ReMDy3/app/src/main/res/layout/activity_inventory.xml
+++ b/ReMDy3/app/src/main/res/layout/activity_inventory.xml
@@ -15,6 +15,7 @@
             android:id="@+id/btnAddItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="addItem"
             android:text="Add Item"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
