--- a/ReMDy3/app/src/main/res/layout/activity_patientrecord.xml
+++ b/ReMDy3/app/src/main/res/layout/activity_patientrecord.xml
@@ -15,6 +15,7 @@
             android:id="@+id/btnAddRecord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="addRecord"
             android:text="Add Record"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
