--- a/ReMDy3/app/src/main/res/layout/activity_edit_item.xml
+++ b/ReMDy3/app/src/main/res/layout/activity_edit_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E3F6FA"
-    tools:context=".additem">
+    tools:context=".editItem">
 
     <TextView
         android:id="@+id/textView2"
@@ -110,8 +110,8 @@
         android:id="@+id/btnSavePatient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="addItm"
-        android:text="ADD"
+        android:onClick="saveItem"
+        android:text="Save Changes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
