--- a/ReMDy3/app/src/main/res/layout/activity_edit_patient.xml
+++ b/ReMDy3/app/src/main/res/layout/activity_edit_patient.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E3F6FA"
-    tools:context=".addRecord">
+    tools:context=".editPatient">
 
     <Button
         android:id="@+id/btnSavePatient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="addPatient"
-        android:text="ADD"
+        android:onClick="SaveChange"
+        android:text="Save Changes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
